smartlights-frontend/deployment.yaml
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: smartlights-frontend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: smartlights-frontend
    spec:
      containers:
      - name: smartlights-frontend
        image: smartlights/web-frontend:latest
        imagePullPolicy: Always
        ports:
          - name: web
            containerPort: 3000
            protocol: TCP
